apps/bpmn-webview/src/styles/dark-theme/properties-panel.css
@import "colors.css";

:root .bio-properties-panel {
    --text-base-color: var(--dt-surface-a70);
    --text-error-color: var(--dt-color-red-a10);
    --link-color: var(--dt-color-blue-a50);

    --description-color: var(--dt-surface-a60);
    --description-code-background-color: var(--dt-surface-a10);
    --description-code-border-color: var(--dt-surface-a20);
    --description-list-item-color: var(--dt-surface-a40);

    --placeholder-color: var(--dt-surface-a50);
    --placeholder-background-color: var(--dt-surface-a10);

    --header-background-color: var(--dt-surface-a10);
    --header-icon-fill-color: var(--dt-surface-a60);
    --header-bottom-border-color: var(--dt-surface-a30);

    --group-background-color: var(--dt-surface-a10);
    --group-bottom-border-color: var(--dt-surface-a30);

    --sticky-group-background-color: var(--dt-surface-a20);
    --sticky-group-bottom-border-color: var(--dt-surface-a30);

    --add-entry-fill-color: var(--dt-surface-a60);
    --add-entry-hover-fill-color: var(--dt-surface-a20);
    --add-entry-hover-background-color: var(--dt-primary-a30);
    --add-entry-label-color: var(--dt-surface-a20);

    --remove-entry-fill-color: var(--dt-color-red-a10);
    --remove-entry-hover-background-color: var(--dt-color-red-a20);

    --arrow-fill-color: var(--dt-surface-a60);
    --arrow-hover-background-color: var(--dt-surface-a20);

    --dot-color: var(--dt-surface-a60);
    --dot-color-error: var(--dt-color-red-a10);

    --list-badge-color: var(--dt-surface-a60);
    --list-badge-background-color: var(--dt-surface-a0);

    --input-background-color: var(--dt-surface-a20);
    --input-border-color: var(--dt-surface-a10);

    --input-focus-background-color: var(--dt-primary-a50);
    --input-focus-border-color: var(--dt-primary-a10);
    --focus-outline-color: var(--dt-primary-a0);

    --input-error-background-color: var(--dt-color-red-a20);
    --input-error-border-color: var(--dt-color-red-a10);
    --input-error-focus-border-color: var(--dt-color-red-a10);

    --input-disabled-color: var(--dt-surface-tonal-a40);
    --input-disabled-background-color: var(--dt-surface-tonal-a10);
    --input-disabled-border-color: var(--dt-surface-tonal-a40);

    --toggle-switch-on-background-color: var(--dt-primary-a10);
    --toggle-switch-off-background-color: var(--dt-primary-a40);
    --toggle-switch-switcher-background-color: var(--dt-primary-a50);

    --side-line-background-color: var(--dt-surface-a30);
    --side-line-extension-background-color: var(--dt-surface-a30);

    --list-entry-dot-background-color: var(--dt-surface-a30);
    --list-entry-header-button-fill-color: var(--dt-surface-a30);
    --list-entry-add-entry-empty-background-color: var(--dt-primary-a0);
    --list-entry-add-entry-empty-hover-background-color: var(--dt-primary-a0);
    --list-entry-add-entry-label-color: var(--dt-surface-a70);
    --list-entry-add-entry-background-color: var(--dt-primary-a10);
    --list-entry-add-entry-fill-color: var(--dt-surface-a70);

    --dropdown-item-background-color: var(--dt-surface-a10);
    --dropdown-item-hover-background-color: var(--dt-surface-a20);
    --dropdown-separator-background-color: var(--dt-surface-a20);

    --feel-background-color: transparent;
    --feel-active-color: var(--dt-primary-a10);
    --feel-inactive-color: var(--dt-surface-a30);
    --feel-hover-color: var(--dt-surface-a70);
    --feel-hover-background-color: var(--dt-surface-a20);
    --feel-active-background-color: transparent;
    --feel-required-color: var(--dt-surface-a60);
    --feel-open-popup-color: hsla(0, 0%, 32%, 1);
    --feel-open-popup-background-color: var(--dt-surface-a70);
    --feel-open-popup-hover-color: var(--dt-primary-a10);

    --feel-indicator-background-color: var(--dt-surface-a70);

    --feelers-select-color: var(--dt-primary-a40);
}

.bio-properties-panel-popup {
    --popup-background-color: var(--dt-surface-a20);
    --popup-header-background-color: var(--dt-surface-a10);
    --popup-font-color: var(--dt-surface-a70);
    --popup-title-color: var(--dt-surface-a70);

    --feel-popup-close-background-color: var(--dt-primary-a10);
    --feel-popup-gutters-background-color: var(--dt-surface-a20);
}

.bio-properties-panel-container {
    background-color: var(--dt-surface-a10) !important;
}

.bio-properties-panel-textarea textarea,
.bio-properties-panel-textfield input {
    color: var(--dt-surface-a60) !important;
}

.bio-properties-panel-textarea > textarea:focus,
.bio-properties-panel-textfield > input:focus {
    color: var(--dt-surface-a10) !important;
}

.bio-properties-panel-checkbox > input[type="checkbox"] {
    accent-color: var(--dt-primary-a10) !important;
}

.bio-properties-panel-select-template-button,
.bio-properties-panel-applied-template-button > button {
    background-color: var(--dt-primary-a20) !important;
    color: var(--dt-surface-a20) !important;
    cursor: pointer;

    svg {
        fill: var(--dt-surface-a20) !important;
    }
}

.bio-properties-panel-select-template-button:hover,
.bio-properties-panel-applied-template-button > button:hover {
    background-color: var(--dt-primary-a40) !important;
}

.bio-properties-panel-select > select {
    color: var(--dt-surface-a60) !important;
}

.bio-properties-panel-select > select:focus {
    color: var(--dt-surface-a20) !important;
}

.bio-properties-panel-dropdown-button__menu {
    box-shadow: 0 1px 4px 0 var(--dt-surface-a40), 0 2px 16px 0 var(--dt-surface-a30) !important;

    button {
        color: var(--dt-surface-a70) !important;
    }
}

